fixed some layout issues

--- a/src/site/css/main.scss
+++ b/src/site/css/main.scss
@@ -82,6 +82,32 @@ a, a:hover, a:visited {
   color: $blue-color;
 }
 
+b, strong {
+  font-family: brandon-medium, sans-serif;
+}
+
+blockquote {
+  font: inherit;
+}
+
+img.alignright {
+  float: right;
+  padding-left: $spacing-unit / 2;
+}
+img.aligncenter {
+  display: block;
+  margin: 0 auto 0 auto;
+}
+
+.main-content {
+  img {
+    // TODO: make this responsive
+    max-width: 700px;
+    height: auto;
+    display: block;
+  }
+}
+
 /**
 * Layout
 */
